--- a/client/src/css/index.css
+++ b/client/src/css/index.css
@@ -1,17 +1,4 @@
-div#status {
-	margin: 0 auto;
-	font-size: 42px;
-	text-align: center;
-}
-
-input#input {
-	font-size: 28px;
-	width: 90%;
-	margin: 5px auto;
-	display: block;
-}
-
-button#action {
+button {
 	font-size: 36px;
 	margin: 10px auto;
 	display: block;
