--- a/client/src/css/mindMaze.css
+++ b/client/src/css/mindMaze.css
@@ -10,12 +10,16 @@ div#grid {
 }
 
 div#grid div {
-	background: radial-gradient(#333 1%, #fff);
+	background: radial-gradient(#333 1%, #fff 50%);
 	float: left;
 }
 
 div#grid div:hover {
-	background: radial-gradient(#457 3%, #fff);
+	background: radial-gradient(#457 6%, #fff 60%);
+}
+
+div#grid div:active {
+	background: radial-gradient(#552 12%, #fff 70%);
 }
 
 button {
