--- a/client/src/css/mindMaze.css
+++ b/client/src/css/mindMaze.css
@@ -10,16 +10,33 @@ div#grid {
 }
 
 div#grid div {
-	background: radial-gradient(#333 1%, #fff 50%);
+	border: 1px solid #333;
 	float: left;
+	box-sizing: border-box;
 }
 
 div#grid div:hover {
-	background: radial-gradient(#457 6%, #fff 60%);
+	border: 3px solid rgb(197, 104, 42);
 }
 
 div#grid div:active {
-	background: radial-gradient(#552 12%, #fff 70%);
+	border: 5px solid rgb(197, 42, 42);
+}
+
+div#grid div.start {
+	background-color: #77d0d0;
+}
+
+div#grid div.last {
+	background-color: #77a8d0;
+}
+
+div#grid div.next {
+	background-color: #77d07b;
+}
+
+div#grid div.goal {
+	background-color: #e0c632;
 }
 
 button {
